[fix] build時にテストを実行しないように修正

--- a/.github/workflows/.github-ci.yml
+++ b/.github/workflows/.github-ci.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           cd ./core-system
           chmod +x ./gradlew
-          ./gradlew build
+          ./gradlew build -x test
   test:
     runs-on: ubuntu-latest
     services:
