--- a/elasticmq/custom.conf
+++ b/elasticmq/custom.conf
@@ -1,7 +1,7 @@
 include classpath("application.conf")
 
 queues {
-  sheetUsedEventQueue {
+  seatUsedEventQueue {
     defaultVisibilityTimeout = 10 seconds
     delay = 5 seconds
     receiveMessageWait = 0 seconds
