[fix] 混在していたsqsの設定を修正

--- a/core-system/src/main/resources/application.yml
+++ b/core-system/src/main/resources/application.yml
@@ -59,4 +59,5 @@ aws:
     endpoint: "${AWS_DYNAMODB_ENDPOINT}"
   sqs:
     endpoint: "${AWS_SQS_ENDPOINT}"
+    queueUrl: "${AWS_SQS_QUEUE_URL}"
 
